--- a/bin/node/runtime/Cargo.toml
+++ b/bin/node/runtime/Cargo.toml
@@ -89,6 +89,7 @@ pallet-transaction-payment-rpc-runtime-api = { version = "4.0.0-dev", default-fe
 pallet-transaction-storage = { version = "4.0.0-dev", default-features = false, path = "../../../frame/transaction-storage" }
 pallet-uniques = { version = "4.0.0-dev", default-features = false, path = "../../../frame/uniques" }
 pallet-vesting = { version = "4.0.0-dev", default-features = false, path = "../../../frame/vesting" }
+pallet-nicks= { version = "4.0.0-dev", default-features = false, path = "../../../frame/nicks" }
 
 [build-dependencies]
 substrate-wasm-builder = { version = "5.0.0-dev", path = "../../../utils/wasm-builder" }
@@ -161,6 +162,7 @@ std = [
 	"pallet-recovery/std",
 	"pallet-uniques/std",
 	"pallet-vesting/std",
+	"pallet-nicks/std",
 	"log/std",
 	"frame-try-runtime/std",
 	"sp-npos-elections/std",
@@ -199,6 +201,7 @@ runtime-benchmarks = [
 	"pallet-utility/runtime-benchmarks",
 	"pallet-uniques/runtime-benchmarks",
 	"pallet-vesting/runtime-benchmarks",
+	# "pallet-nicks/runtime-benchmarks",
 	"pallet-offences-benchmarking",
 	"pallet-session-benchmarking",
 	"frame-system-benchmarking",
@@ -243,6 +246,7 @@ try-runtime = [
 	"pallet-recovery/try-runtime",
 	"pallet-uniques/try-runtime",
 	"pallet-vesting/try-runtime",
+	"pallet-nicks/try-runtime",
 	"pallet-gilt/try-runtime",
 ]
 # Make contract callable functions marked as __unstable__ available. Do not enable
