--- a/client/allocator/Cargo.toml
+++ b/client/allocator/Cargo.toml
@@ -14,7 +14,7 @@ readme = "README.md"
 targets = ["x86_64-unknown-linux-gnu"]
 
 [dependencies]
-sp-core = { version = "4.0.0-dev", path = "../../primitives/core" }
-sp-wasm-interface = { version = "4.0.0-dev", path = "../../primitives/wasm-interface" }
+sp-core = { version = "3.0.0" }
+sp-wasm-interface = { version = "3.0.0" }
 log = "0.4.11"
 thiserror = "1.0.21"
